--- a/cdc/resources/cdc_etl.pipeline.yml
+++ b/cdc/resources/cdc_etl.pipeline.yml
@@ -13,8 +13,8 @@ resources:
         - glob:
             include: ../src/cdc_etl/transformations/**
 
-      environment:
-        dependencies:
+      #environment:
+      #  dependencies:
           # We include every dependency defined by pyproject.toml by defining an editable environment
           # that points to the folder where pyproject.toml is deployed.
-          - --editable ${workspace.file_path}
+      #    - --editable ${workspace.file_path}
