--- a/cdc/pyproject.toml
+++ b/cdc/pyproject.toml
@@ -16,6 +16,7 @@ dev = [
     "pytest",
     "databricks-dlt",
     "databricks-connect>=15.4,<15.5",
+    "ruff>=0.14.6",
 ]
 
 [tool.hatch.build.targets.wheel]
